--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,16 +1,31 @@
-- name : Configure Docker on EC2 Instances
-  hosts : all
+- name: Configure Docker on EC2 Instances
+  hosts: all
   become: true
-  connection : ssh
-  tasks : 
-  - name: updating apt
-    command : sudo apt-get update
+  connection: ssh
 
-  - name : Install Docker
-    command : sudo apt-get install -y docker.io
+  tasks:
+    - name: Update apt repository
+      apt:
+        update_cache: yes
 
-  - name : Start Docker Service
-    command : sudo systemctl start docker
+    - name: Install Docker
+      apt:
+        name: docker.io
+        state: present
 
-  - name: Deploy Docker Container
-    command: docker run -d -p 8084:8081 malay442/sa-banking:1.0
+    - name: Ensure Docker service is started
+      systemd:
+        name: docker
+        state: started
+        enabled: yes
+
+    - name: Deploy Docker Container
+      docker_container:
+        name: sa-banking-container
+        image: malay442/sa-banking:1.0
+        state: started
+        restart_policy: always
+        published_ports:
+          - "8084:8081"
+
+
