--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,31 +1,16 @@
-- name: Configure Docker on EC2 Instances
-  hosts: all
+- name : Configure Docker on EC2 Instances
+  hosts : all
   become: true
-  connection: ssh
+  connection : ssh
+  tasks : 
+  - name: updating apt
+    command : sudo apt-get update
 
-  tasks:
-    - name: Update apt repository
-      apt:
-        update_cache: yes
+  - name : Install Docker
+    command : sudo apt-get install -y docker.io
 
-    - name: Install Docker
-      apt:
-        name: docker.io
-        state: present
+  - name : Start Docker Service
+    command : sudo systemctl start docker
 
-    - name: Ensure Docker service is started
-      systemd:
-        name: docker
-        state: started
-        enabled: yes
-
-    - name: Deploy Docker Container
-      docker_container:
-        name: sa-banking-container
-        image: malay442/sa-banking:1.0
-        state: started
-        restart_policy: always
-        published_ports:
-          - "8084:8081"
-
-
+  - name: Deploy Docker Container
+    command: docker run -itd -p 8085:8081 aijazmeer/staragile-banking-app:1.0
